--- a/src/simulator/Makefile
+++ b/src/simulator/Makefile
@@ -1,8 +1,11 @@
 CC=g++
 CFLAGS=-g -Wall -Werror
 
-simulator: pipeline.cpp ../utils.cpp
-	$(CC) $(CFLAGS) -o $@ $^
+C_SRC=pipeline.cpp ../utils.cpp
+H_SRC=$(wildcard *.hpp ../utils.hpp)
+
+simulator: ${C_SRC} ${H_SRC}
+	$(CC) $(CFLAGS) -o $@ ${C_SRC}
 
 clean:
 	rm -f simulator
